--- a/src/components/BeforeDashboard/index.scss
+++ b/src/components/BeforeDashboard/index.scss
@@ -4,21 +4,22 @@
   margin-bottom: base(1.5);
 
   &__banner {
+    margin-bottom: base(0.5);
+
     & h4 {
       margin: 0;
     }
   }
 
-  &__instructions {
-    list-style: decimal;
-    margin-bottom: base(0.5);
-
-    & li {
-      width: 100%;
-    }
+  & p {
+    margin: 0 0 base(0.5);
   }
 
   & a:hover {
     opacity: 0.85;
+  }
+
+  &__link {
+    font-weight: 600;
   }
 }
